force-app/main/default/objects/Product_Option__c/Product_Option__c.object-meta.xml
<CustomObject>
    <label>Product Option</label>
    <nameField>
        <displayFormat>Product Option - {0000}</displayFormat>
        <label>Product Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>