force-app/main/default/objects/Product_Option__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Product Options</relationshipLabel>
    <relationshipName>Bundle_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>